<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="125dp"
        android:text="@string/absenom"
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="210dp"
        android:text="@string/absensi_online_mahasiswa"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="240dp"
        android:orientation="vertical">

    <EditText
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:id="@+id/email"
        android:hint="@string/email"
        android:inputType="text"
        android:autofillHints=""/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints=""/>
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="370dp"
        android:backgroundTint="#9BF5F6"
        android:gravity="center"
        android:text="@string/login"/>

</RelativeLayout>